nerva_libwallet2_api_c/src/main/cpp/nerva_wallet2_api_c.h

//     virtual void setAutoRefreshInterval(int millis) = 0;
extern ADDAPI void NERVA_Wallet_setAutoRefreshInterval(void* wallet_ptr, int millis);
//     virtual int autoRefreshInterval() const = 0;
extern ADDAPI int NERVA_Wallet_autoRefreshInterval(void* wallet_ptr);
//     virtual void addSubaddressAccount(const std::string& label) = 0;
extern ADDAPI void NERVA_Wallet_addSubaddressAccount(void* wallet_ptr, const char* label);
//     virtual size_t numSubaddressAccounts() const = 0;
extern ADDAPI size_t NERVA_Wallet_numSubaddressAccounts(void* wallet_ptr);
//     virtual size_t numSubaddresses(uint32_t accountIndex) const = 0;
extern ADDAPI size_t NERVA_Wallet_numSubaddresses(void* wallet_ptr, uint32_t accountIndex);
//     virtual void addSubaddress(uint32_t accountIndex, const std::string& label) = 0;
extern ADDAPI void NERVA_Wallet_addSubaddress(void* wallet_ptr, uint32_t accountIndex, const char* label);
//     virtual std::string getSubaddressLabel(uint32_t accountIndex, uint32_t addressIndex) const = 0;
extern ADDAPI const char* NERVA_Wallet_getSubaddressLabel(void* wallet_ptr, uint32_t accountIndex, uint32_t addressIndex);
//     virtual void setSubaddressLabel(uint32_t accountIndex, uint32_t addressIndex, const std::string &label) = 0;
extern ADDAPI void NERVA_Wallet_setSubaddressLabel(void* wallet_ptr, uint32_t accountIndex, uint32_t addressIndex, const char* label);
//     virtual MultisigState multisig() const = 0;
extern ADDAPI void* NERVA_Wallet_multisig(void* wallet_ptr);
//     virtual std::string getMultisigInfo() const = 0;
extern ADDAPI const char* NERVA_Wallet_getMultisigInfo(void* wallet_ptr);
//     virtual std::string makeMultisig(const std::vector<std::string>& info, uint32_t threshold) = 0;
extern ADDAPI const char* NERVA_Wallet_makeMultisig(void* wallet_ptr, const char* info, const char* info_separator, uint32_t threshold);
//     virtual std::string exchangeMultisigKeys(const std::vector<std::string> &info, const bool force_update_use_with_caution) = 0;
extern ADDAPI const char* NERVA_Wallet_exchangeMultisigKeys(void* wallet_ptr, const char* info, const char* info_separator);
//     virtual bool exportMultisigImages(std::string& images) = 0;
extern ADDAPI const char* NERVA_Wallet_exportMultisigImages(void* wallet_ptr, const char* separator);
//     virtual size_t importMultisigImages(const std::vector<std::string>& images) = 0;
extern ADDAPI size_t NERVA_Wallet_importMultisigImages(void* wallet_ptr, const char* info, const char* info_separator);
//     virtual bool hasMultisigPartialKeyImages() const = 0;
extern ADDAPI size_t NERVA_Wallet_hasMultisigPartialKeyImages(void* wallet_ptr);
//     virtual PendingTransaction*  restoreMultisigTransaction(const std::string& signData) = 0;
extern ADDAPI void* NERVA_Wallet_restoreMultisigTransaction(void* wallet_ptr, const char* signData);
//     virtual PendingTransaction * createTransactionMultDest(const std::vector<std::string> &dst_addr, const std::string &payment_id,
//                                                    optional<std::vector<uint64_t>> amount, uint32_t mixin_count,
//                                                    PendingTransaction::Priority = PendingTransaction::Priority_Low,
//                                                    uint32_t subaddr_account = 0,
//                                                    std::set<uint32_t> subaddr_indices = {}) = 0;
extern ADDAPI void* NERVA_Wallet_createTransactionMultDest(void* wallet_ptr, const char* dst_addr_list, const char* dst_addr_list_separator, const char* payment_id,
                                                bool amount_sweep_all, const char* amount_list, const char* amount_list_separator, uint32_t mixin_count,
                                                int pendingTransactionPriority,
                                                uint32_t subaddr_account,
                                                const char* preferredInputs, const char* preferredInputs_separator);