impls/monero.dart/lib/src/generated_bindings_nerva.g.dart


  late final _NERVA_Wallet_setAutoRefreshIntervalPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>>(
      'NERVA_Wallet_setAutoRefreshInterval');
  late final _NERVA_Wallet_setAutoRefreshInterval =
      _NERVA_Wallet_setAutoRefreshIntervalPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, int)>();

  int NERVA_Wallet_autoRefreshInterval(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_autoRefreshInterval(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_autoRefreshIntervalPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_autoRefreshInterval');
  late final _NERVA_Wallet_autoRefreshInterval =
      _NERVA_Wallet_autoRefreshIntervalPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  void NERVA_Wallet_addSubaddressAccount(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _NERVA_Wallet_addSubaddressAccount(
      wallet_ptr,
      label,
    );
  }

  late final _NERVA_Wallet_addSubaddressAccountPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_addSubaddressAccount');
  late final _NERVA_Wallet_addSubaddressAccount =
      _NERVA_Wallet_addSubaddressAccountPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int NERVA_Wallet_numSubaddressAccounts(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_numSubaddressAccounts(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_numSubaddressAccountsPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_numSubaddressAccounts');
  late final _NERVA_Wallet_numSubaddressAccounts =
      _NERVA_Wallet_numSubaddressAccountsPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_Wallet_numSubaddresses(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
  ) {
    return _NERVA_Wallet_numSubaddresses(
      wallet_ptr,
      accountIndex,
    );
  }

  late final _NERVA_Wallet_numSubaddressesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<ffi.Void>,
              ffi.Uint32)>>('NERVA_Wallet_numSubaddresses');
  late final _NERVA_Wallet_numSubaddresses = _NERVA_Wallet_numSubaddressesPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  void NERVA_Wallet_addSubaddress(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _NERVA_Wallet_addSubaddress(
      wallet_ptr,
      accountIndex,
      label,
    );
  }

  late final _NERVA_Wallet_addSubaddressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_addSubaddress');
  late final _NERVA_Wallet_addSubaddress =
      _NERVA_Wallet_addSubaddressPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_getSubaddressLabel(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
    int addressIndex,
  ) {
    return _NERVA_Wallet_getSubaddressLabel(
      wallet_ptr,
      accountIndex,
      addressIndex,
    );
  }

  late final _NERVA_Wallet_getSubaddressLabelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
              ffi.Uint32)>>('NERVA_Wallet_getSubaddressLabel');
  late final _NERVA_Wallet_getSubaddressLabel =
      _NERVA_Wallet_getSubaddressLabelPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, int, int)>();

  void NERVA_Wallet_setSubaddressLabel(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
    int addressIndex,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _NERVA_Wallet_setSubaddressLabel(
      wallet_ptr,
      accountIndex,
      addressIndex,
      label,
    );
  }

  late final _NERVA_Wallet_setSubaddressLabelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32, ffi.Uint32,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_setSubaddressLabel');
  late final _NERVA_Wallet_setSubaddressLabel =
      _NERVA_Wallet_setSubaddressLabelPtr.asFunction<
          void Function(
              ffi.Pointer<ffi.Void>, int, int, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Void> NERVA_Wallet_multisig(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_multisig(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_multisigPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_multisig');
  late final _NERVA_Wallet_multisig = _NERVA_Wallet_multisigPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_getMultisigInfo(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_getMultisigInfo(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_getMultisigInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_getMultisigInfo');
  late final _NERVA_Wallet_getMultisigInfo = _NERVA_Wallet_getMultisigInfoPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_makeMultisig(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> info,
    ffi.Pointer<ffi.Char> info_separator,
    int threshold,
  ) {
    return _NERVA_Wallet_makeMultisig(
      wallet_ptr,
      info,
      info_separator,
      threshold,
    );
  }

  late final _NERVA_Wallet_makeMultisigPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint32)>>('NERVA_Wallet_makeMultisig');
  late final _NERVA_Wallet_makeMultisig =
      _NERVA_Wallet_makeMultisigPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_exchangeMultisigKeys(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> info,
    ffi.Pointer<ffi.Char> info_separator,
  ) {
    return _NERVA_Wallet_exchangeMultisigKeys(
      wallet_ptr,
      info,
      info_separator,
    );
  }

  late final _NERVA_Wallet_exchangeMultisigKeysPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_exchangeMultisigKeys');
  late final _NERVA_Wallet_exchangeMultisigKeys =
      _NERVA_Wallet_exchangeMultisigKeysPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_exportMultisigImages(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _NERVA_Wallet_exportMultisigImages(
      wallet_ptr,
      separator,
    );
  }

  late final _NERVA_Wallet_exportMultisigImagesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_exportMultisigImages');
  late final _NERVA_Wallet_exportMultisigImages =
      _NERVA_Wallet_exportMultisigImagesPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int NERVA_Wallet_importMultisigImages(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> info,
    ffi.Pointer<ffi.Char> info_separator,
  ) {
    return _NERVA_Wallet_importMultisigImages(
      wallet_ptr,
      info,
      info_separator,
    );
  }

  late final _NERVA_Wallet_importMultisigImagesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_importMultisigImages');
  late final _NERVA_Wallet_importMultisigImages =
      _NERVA_Wallet_importMultisigImagesPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  int NERVA_Wallet_hasMultisigPartialKeyImages(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_hasMultisigPartialKeyImages(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_hasMultisigPartialKeyImagesPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_hasMultisigPartialKeyImages');
  late final _NERVA_Wallet_hasMultisigPartialKeyImages =
      _NERVA_Wallet_hasMultisigPartialKeyImagesPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> NERVA_Wallet_restoreMultisigTransaction(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> signData,
  ) {
    return _NERVA_Wallet_restoreMultisigTransaction(
      wallet_ptr,
      signData,
    );
  }

  late final _NERVA_Wallet_restoreMultisigTransactionPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>>(
      'NERVA_Wallet_restoreMultisigTransaction');
  late final _NERVA_Wallet_restoreMultisigTransaction =
      _NERVA_Wallet_restoreMultisigTransactionPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Void> NERVA_Wallet_createTransactionMultDest(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> dst_addr_list,
    ffi.Pointer<ffi.Char> dst_addr_list_separator,
    ffi.Pointer<ffi.Char> payment_id,
    bool amount_sweep_all,
    ffi.Pointer<ffi.Char> amount_list,
    ffi.Pointer<ffi.Char> amount_list_separator,
    int mixin_count,
    int pendingTransactionPriority,
    int subaddr_account,
    ffi.Pointer<ffi.Char> preferredInputs,
    ffi.Pointer<ffi.Char> preferredInputs_separator,
  ) {
    return _NERVA_Wallet_createTransactionMultDest(
      wallet_ptr,
      dst_addr_list,
      dst_addr_list_separator,
      payment_id,
      amount_sweep_all,
      amount_list,
      amount_list_separator,
      mixin_count,
      pendingTransactionPriority,
      subaddr_account,
      preferredInputs,
      preferredInputs_separator,
    );
  }

  late final _NERVA_Wallet_createTransactionMultDestPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Bool,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Uint32,
                  ffi.Int,
                  ffi.Uint32,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>)>>(
      'NERVA_Wallet_createTransactionMultDest');
  late final _NERVA_Wallet_createTransactionMultDest =
      _NERVA_Wallet_createTransactionMultDestPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              bool,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              int,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();
